about me and images

--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
     </p>
 
     <!-- task 4: include an image that represents something about you - this could be a picture of yourself, an interest of yours, or maybe some art you created!-->
-    <img src="http://www.nasa.gov/sites/default/files/thumbnails/image/web_first_images_release.png">
+    <img src="https://media.discordapp.net/attachments/579145919308759042/1031737082936315924/IMG_2536.jpg?width=249&height=418">
   </div>
 
   <script src="script.js"></script>
