--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
   </br>
 
   <!-- task 7: add a link to your Fellowship Agenda.-->
-  <p>Link to Agenda</p>
+ <p> <a href=" https://docs.google.com/document/d/1CBfGSYFNDNCh5oWlFDHO_90CZ5AR4_ojjvjjmInc_S4/edit"> Link to Agenda
+ </a>
+ </p>
   </br>
   </div>
 
