--- a/portfolios.html
+++ b/portfolios.html
@@ -31,8 +31,8 @@
     <div class="student">
       <a href=" " target="_blank">
         <img
-          src="https://cdn.glitch.com/3f130f92-c599-4005-ae95-c6cd19387185%2Fprofile-placeholder.png?v=1590605956908">
-        <h3>Student</h3>
+          src="https://media.discordapp.net/attachments/579145919308759042/1031737082936315924/IMG_2536.jpg?width=249&height=418">
+        <h3>Ivan</h3>
       </a>
     </div>
 
